// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate-component-tree should allow the caching to be disabled globally 1`] = `
Array [
  "one",
  "oneone",
]
`;

exports[`xstate-component-tree should allow the caching to be disabled globally 2`] = `
Array [
  "one",
]
`;

exports[`xstate-component-tree should allow the caching to be disabled locally 1`] = `
Array [
  "one",
  "oneone",
]
`;

exports[`xstate-component-tree should allow the caching to be disabled locally 2`] = `
Array [
  "one",
]
`;

exports[`xstate-component-tree should ignore stale trees if component loads hadn't completed 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "two",
    "path": "two",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should pass context and event params to .load methods 1`] = `
Array [
  Object {
    "children": Array [],
    "component": Object {
      "ctx": "context",
      "event": Object {
        "type": "xstate.init",
      },
    },
    "path": "one",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should re-run load functions when transitioning back to a state 1`] = `
Array [
  "one",
]
`;

exports[`xstate-component-tree should re-run load functions when transitioning back to a state 2`] = `
Array [
  "two",
]
`;

exports[`xstate-component-tree should re-run load functions when transitioning back to a state 3`] = `
Array [
  "one",
]
`;

exports[`xstate-component-tree should support async .load methods 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support async .load methods that return: async component & sync props 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "one",
    "path": "one",
    "props": Object {
      "props": true,
    },
  },
]
`;

exports[`xstate-component-tree should support async .load methods that return: sync component & async props 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "one",
    "path": "one",
    "props": Object {
      "props": true,
    },
  },
]
`;

exports[`xstate-component-tree should support async .load methods that return: sync component & sync props 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "one",
    "path": "one",
    "props": Object {
      "props": true,
    },
  },
]
`;

exports[`xstate-component-tree should support nested async .load methods 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "two",
        "path": "one.two",
        "props": false,
      },
    ],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;

exports[`xstate-component-tree should support returning a component and props 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "one",
    "path": "one",
    "props": Object {
      "props": true,
    },
  },
]
`;

exports[`xstate-component-tree should support sync .load methods 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;
